# opti_fit

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  generate_images.py  gurobi.env  hit_distribution_false_positive.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  relaxed-hit-model-results.json  runs.sh  search.html  sitemap.xml
.github/workflows/: automatic_checks.yaml  docs.yaml
algorithm-combination/: index.html
definitions/: index.html
docs/: algorithm-combination.md  definitions.md  future-ideas.md  hit_distribution_true_positive.json  index.md  multiple-cutoff-model.md  multiple_cutoff_model.md  relax-the-true-positive-requirement.md  relaxed-hit-model-pareto.json  results.md  simple-model.md  simple_model.md  simple_model_results.json  solver-comparisons.md  the-dataset.md
future-ideas/: index.html
opti_fit/: compare_solvers.py  dataset_utils.py  main.py  model_utils.py  models.py  multiple_cutoff_model.py  relaxed_model.py  simple_model.py
opti_fit/models/: combination_model.py  models.py  relaxed_model.py  simple_model.py
opti_fit/runners/: compare_solvers.py  run_algorithm_combination.py  run_combination_model.py  run_relaxed_model.py  run_simple_model.py  run_solver_comparison.py
opti_fit/utils/: dataset_utils.py  model_utils.py  runner_utils.py
relax-the-true-positive-requirement/: index.html
results/: combination_simple_hit_GUROBI_e1c2a078d4abcdf595e7723689d4213d6a8c24dc.json  index.html  relaxed_hit_GUROBI_[0.95, 0.96, 0.97, 0.98, 0.985, 0.99, 0.995, 0.999]_e1c2a078d4abcdf595e7723689d4213d6a8c24dc.json  relaxed_hit_GUROBI_[0.95, 0.96, 0.97, 0.98, 0.99, 0.999]_e1c2a078d4abcdf595e7723689d4213d6a8c24dc.json  simple_combined_GUROBI_e1c2a078d4abcdf595e7723689d4213d6a8c24dc.json  simple_hit_GUROBI_016da47e043b71471873a35768cc38b313a9a262.json  simple_hit_GUROBI_164f22eccc62fca5935df6152436ee9bc80bea46.json  simple_hit_GUROBI_e1c2a078d4abcdf595e7723689d4213d6a8c24dc.json  simple_hit_mip_True.xlsx  simple_payment_GUROBI_e1c2a078d4abcdf595e7723689d4213d6a8c24dc.json  simple_payment_mip_True.xlsx
search/: search_index.json
simple-model/: index.html
simple_model/: index.html
solver-comparisons/: index.html
tests/: conftest.py  test_dataset_utils.py  test_multiple_cutoff_model.py  test_simple_model.py
tests/models/: test_models.py  test_relaxed_model.py  test_simple_model.py
tests/runners/: test_run_algorithm_combination.py
tests/utils/: test_dataset_utils.py  test_model_utils.py  test_runner_utils.py
the-dataset/: index.html
